<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    >
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="32dp">

    <pl.droidsonroids.gif.GifImageView
        android:layout_width="600dp"
        android:layout_height="300dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/login_2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/img_login"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/text_login"
        android:textSize="14pt"
        android:fontFamily="@font/ttnorms_bold"
        android:textColor="@android:color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_login"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_username"
        app:layout_constraintTop_toBottomOf="@+id/text_login"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:layout_marginTop="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_password"
        app:layout_constraintTop_toBottomOf="@+id/input_username"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_marginTop="16dp"
        app:endIconDrawable="@drawable/ic_baseline_visibility_off_24"
        app:endIconMode="password_toggle"
        app:helperTextEnabled="true"
        app:helperText="@string/min_password_str">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_password"
        android:layout_marginTop="16dp"
        android:text="@string/login_btn_text"
        android:id="@+id/btn_login"
        android:textSize="7pt"
        android:padding="12dp"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login"
        android:layout_marginTop="8dp"
        android:text="@string/login_register_btn_text"
        android:id="@+id/btn_login_register"
        android:textSize="5pt"
        android:padding="14dp"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>