<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="12pt"
        android:fontFamily="@font/ttnorms_regular"
        android:layout_marginTop="32dp"
        android:id="@+id/welcome_text"
        android:textColor="@android:color/black"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/diva_beauty"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_text"
        android:textSize="14pt"
        android:fontFamily="@font/ttnorms_bold"
        android:layout_marginTop="8dp"
        android:id="@+id/nama_text"
        android:textColor="@android:color/black"/>

    <pl.droidsonroids.gif.GifImageView
        android:layout_width="485dp"
        android:layout_height="425dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/doctor_gif"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nama_text"
        android:id="@+id/img_welcome"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_welcome"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        android:text="@string/get_started"
        android:id="@+id/btn_start"
        android:padding="16dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>