<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="32dp">

        <pl.droidsonroids.gif.GifImageView
            android:layout_width="600dp"
            android:layout_height="300dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/register"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/img_register"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            android:id="@+id/text_register"
            android:textSize="14pt"
            android:fontFamily="@font/ttnorms_bold"
            android:textColor="@android:color/black"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_register"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_input_nama"
            app:layout_constraintTop_toBottomOf="@+id/text_register"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/full_name"
            android:layout_marginTop="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

            <RadioGroup
                android:id="@+id/radio_jenis_kelamin"
                android:checkedButton="@+id/radio_perempuan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/register_input_nama"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:id="@+id/jenis_kelamin">
                <RadioButton
                    android:id="@+id/radio_perempuan"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="Perempuan"
                    android:layout_marginEnd="32dp"/>
                <RadioButton
                    android:id="@+id/radio_lakilaki"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="Laki-Laki"
                    />
                </LinearLayout>
            </RadioGroup>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_input_email"
            app:layout_constraintTop_toBottomOf="@+id/radio_jenis_kelamin"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:layout_marginTop="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_input_notelp"
            app:layout_constraintTop_toBottomOf="@+id/register_input_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number"
            android:layout_marginTop="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_input_noktp"
            app:layout_constraintTop_toBottomOf="@+id/register_input_notelp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/identity_number_nik"
            android:layout_marginTop="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"/>
        </com.google.android.material.textfield.TextInputLayout>



<!--        <com.google.android.material.textfield.TextInputLayout-->
<!--            android:id="@+id/input_password"-->
<!--            app:layout_constraintTop_toBottomOf="parent"-->
<!--            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:hint="@string/password"-->
<!--            android:layout_marginTop="16dp"-->
<!--            app:endIconDrawable="@drawable/ic_baseline_visibility_off_24"-->
<!--            app:endIconMode="password_toggle"-->
<!--            app:helperTextEnabled="true"-->
<!--            app:helperText="@string/min_password_str">-->

<!--            <com.google.android.material.textfield.TextInputEditText-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:inputType="textPassword"/>-->
<!--        </com.google.android.material.textfield.TextInputLayout>-->

<!--        <Button-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            app:layout_constraintLeft_toLeftOf="parent"-->
<!--            app:layout_constraintRight_toRightOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/input_password"-->
<!--            android:layout_marginTop="16dp"-->
<!--            android:text="@string/login_btn_text"-->
<!--            android:id="@+id/btn_login"-->
<!--            android:textSize="7pt"-->
<!--            android:padding="12dp"-->
<!--            />-->

<!--        <Button-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            app:layout_constraintLeft_toLeftOf="parent"-->
<!--            app:layout_constraintRight_toRightOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/btn_login"-->
<!--            android:layout_marginTop="8dp"-->
<!--            android:text="@string/login_register_btn_text"-->
<!--            android:id="@+id/btn_login_register"-->
<!--            android:textSize="5pt"-->
<!--            android:padding="14dp"-->
<!--            style="@style/Widget.MaterialComponents.Button.OutlinedButton"-->
<!--            />-->

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>