<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/card_atas"
        android:background="@drawable/rectangle_radius"
        android:orientation="horizontal"
        android:paddingTop="32dp"
        android:paddingHorizontal="16dp"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_marginStart="32dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Welcome,"
                android:id="@+id/welcome_text_home"
                android:fontFamily="@font/ttnorms_regular"
                android:textSize="10pt"
                android:textColor="@android:color/white"
                />

            <TextView
                android:layout_marginStart="32dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Dea Amartya"
                android:id="@+id/nama_text_home"
                android:fontFamily="@font/ttnorms_bold"
                android:layout_marginTop="2dp"
                android:textSize="12pt"
                android:textColor="@android:color/white"
                />
        </LinearLayout>
    </LinearLayout>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:checkable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintTop_toBottomOf="@+id/card_atas"
        app:cardBackgroundColor="@color/colorPrimaryDark"
        android:id="@+id/card_pemeriksaan"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginEnd="8dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jadwalkan"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="@android:color/white"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/pemeriksaan_dengan_dokter"
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:textColor="@android:color/white"
                />
        </LinearLayout>
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="Card Logo"
            app:srcCompat="@drawable/ic_baseline_settings_24"
            android:layout_gravity="center"/>
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dokter_tersedia"
        android:id="@+id/text_pilihan_dokter"
        app:layout_constraintTop_toBottomOf="@id/card_pemeriksaan"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:fontFamily="@font/ttnorms_bold"
        android:textColor="@android:color/black"
        android:textSize="9pt"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/text_pilihan_dokter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"
        android:id="@+id/recyler_view_dokter"
        tools:listitem="@layout/card_dokter"
        />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:checkable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintTop_toBottomOf="@+id/recyler_view_dokter"
        app:cardBackgroundColor="#81d4fa"
        android:id="@+id/card_riwayat"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginEnd="64dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Lihat"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="@android:color/black"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:text="Riwayat Pertemuan"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    android:textColor="@android:color/black"
                    />
            </LinearLayout>
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="Card Logo"
                app:srcCompat="@drawable/ic_baseline_settings_24"
                android:layout_gravity="center"/>
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:menu="@menu/bottom_navigation_menu"
        style="@style/ThemeOverlay.App.BottomNavigationView"/>

</androidx.constraintlayout.widget.ConstraintLayout>